Outliner: vertical line glitch for collections with objects and collections #53764

Closed
opened 2018-01-11 19:36:15 +01:00 by Dalai Felinto · 4 comments

Blender Version
Broken: 31782609f4
Worked: probably never

Short description of error
Missing vertical line in this case:
vertical_line.png

Exact steps for others to reproduce the error

Or:

  • Add an empty
  • Delete all other objects
  • Look at "Collections" in the outliner
  • Delete all collections (shortcut X, so Empty will move to Master Collection)
  • Add a new collection (shortcut C)

Note: if you delete Collection 1, vertical line for empty is correct.

**Blender Version** Broken: 31782609f4 Worked: probably never **Short description of error** Missing vertical line in this case: ![vertical_line.png](https://archive.blender.org/developer/F1789605/vertical_line.png) **Exact steps for others to reproduce the error** * Open: [vertical_line.blend](https://archive.blender.org/developer/F1789609/vertical_line.blend) Or: * Add an empty * Delete all other objects * Look at "Collections" in the outliner * Delete all collections (shortcut X, so Empty will move to Master Collection) * Add a new collection (shortcut C) Note: if you delete Collection 1, vertical line for empty is correct.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Julian Eisel was assigned by Dalai Felinto 2018-01-11 19:36:56 +01:00
Author
Owner

For anything willing to tackle this, the problem is the logic in outliner_draw.c::outliner_draw_hierarchy_lines_recursive().

For anything willing to tackle this, the problem is the logic in `outliner_draw.c::outliner_draw_hierarchy_lines_recursive()`.

This issue was referenced by de176b75b2

This issue was referenced by de176b75b2040cde2ff0e60932f6a0b0b880ed41
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53764
No description provided.